tests/integration/snapshots/integration__conformance__n_array_double_extra_comma.json.snap
---
source: tests/integration/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
["x",,]
stdout --- 
<empty>
stderr --- 
error: expected json value, found `,`
 --> stdin:1:6
  |
1 | ["x",,]
  |     -^
  |     |
  |     expected due to `,`
