tests/integration/snapshots/integration__conformance__n_array_extra_comma.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 1
success: false
stdout ---
["",]
stderr ---
error: expected json value, found `]`
 --> stdin:1:5
  |
1 | ["",]
  |    -^
  |    |
  |    expected due to `,`
  |
help: consider removing the trailing comma
  |
1 - ["",]
1 + [""]
  |
