tests/integration/snapshots/integration__conformance__n_array_newlines_unclosed.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 1
success: false
stdin ---
["a",
4
,1,
stdout ---

stderr ---
error: expected json value, found no significant characters
 --> stdin:3:3
  |
3 | ,1,
  |   ^
  |   |
  |   expected due to `,`
  |
help: insert a placeholder value
  |
3 | ,1, "rust is a must"
  |     ++++++++++++++++
